# Sprite-Tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/spritetools/core/: FrameInfo.kt  GroupInfo.kt  SpriteConverter.kt  SpriteInfo.kt  SpriteManager.kt  SpriteNative.kt
android/app/src/main/java/com/spritetools/ui/: MainActivity.kt
android/app/src/main/java/com/spritetools/ui/components/: ExportDialog.kt  ImportDialog.kt  PaletteGrid.kt  ProgressDialog.kt  PropertiesPanel.kt  SpriteViewport.kt  StatusBar.kt  Toolbar.kt
android/app/src/main/java/com/spritetools/ui/screens/: AboutDialog.kt  MainScreen.kt
android/app/src/main/java/com/spritetools/ui/theme/: Color.kt  Theme.kt
android/app/src/main/java/com/spritetools/viewmodel/: SpriteViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-ru/: strings.xml
resources/: resources.qrc
src/: about_dialog.cpp  about_dialog.h  app_state.h  export_dialog.cpp  export_dialog.h  frame_slider.cpp  frame_slider.h  import_dialog.cpp  import_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  properties_panel.cpp  properties_panel.h  renderer.cpp  renderer.h  sprite_loader.cpp  sprite_loader.h  sprite_viewport.cpp  sprite_viewport.h  theme.h  ui.cpp  ui.h  ui_utils.cpp  ui_utils.h
src/core/: sprite.h  sprite_converter.cpp  sprite_converter.h  sprite_converter_capi.cpp  sprite_converter_capi.h  sprite_core.cpp  sprite_core.h  sprite_jni.cpp  sprite_loader.cpp  sprite_loader.h
src/icons/: center_focus_strong.h  folder.h  icons.h  navigate_before.h  navigate_next.h  pause.h  play.h  skip_next.h  skip_previous.h  zoom_in.h  zoom_out.h
